Enhance project with modular sensor support and detailed README
- Added support for two deployment modes: Temperature & Humidity and Surf Forecast.
- Updated platformio.ini to define environments for each mode with appropriate libraries.
- Expanded README to include project overview, hardware requirements, features, and setup instructions.
- Introduced SensorInterface for modular sensor management, with implementations for TemperatureHumiditySensor and SurfForecast.
- Implemented time synchronization and display updates for both sensor types.
- Improved e-paper display handling with new layout features and text width calculations.

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,53 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env:temperature_humidity]
+platform = espressif32
+board = freenove_esp32_wrover
+framework = arduino
+monitor_speed = 115200
+build_flags = -DDEPLOYMENT_TEMPERATURE_HUMIDITY
+build_src_filter = +<*> -<surf_forecast.cpp>
+lib_deps =
+    zinggjm/GxEPD2@^1.5.3
+    adafruit/Adafruit GFX Library@^1.11.9
+    adafruit/DHT sensor library@^1.4.4
+
+[env:surf_forecast]
+platform = espressif32
+board = freenove_esp32_wrover
+framework = arduino
+monitor_speed = 115200
+build_flags = -DDEPLOYMENT_SURF_FORECAST
+build_src_filter = +<*> -<temperature_and_humidity.cpp>
+lib_deps =
+    zinggjm/GxEPD2@^1.5.3
+    adafruit/Adafruit GFX Library@^1.11.9
+    bblanchon/ArduinoJson@^7.0.4
+
+; Default environment (change build_flags to switch deployment mode)
 [env:freenove_esp32_wrover]
 platform = espressif32
 board = freenove_esp32_wrover
 framework = arduino
-lib_deps = 
+monitor_speed = 115200
+build_flags = -DDEPLOYMENT_TEMPERATURE_HUMIDITY  ; Change this line to switch modes
+build_src_filter = +<*> -<surf_forecast.cpp>     ; Exclude surf_forecast.cpp for temp/humidity
+lib_deps =
     zinggjm/GxEPD2@^1.5.3
     adafruit/Adafruit GFX Library@^1.11.9
+    adafruit/DHT sensor library@^1.4.4
+    bblanchon/ArduinoJson@^7.0.4
+
+[env:default]
+platform = espressif32
+board = freenove_esp32_wrover
+framework = arduino
+monitor_speed = 115200
+build_flags = -DDEPLOYMENT_TEMPERATURE_HUMIDITY  ; Change this line to switch modes
+build_src_filter = +<*> -<surf_forecast.cpp>     ; Exclude surf_forecast.cpp for temp/humidity
+lib_deps =
+    zinggjm/GxEPD2@^1.5.3
+    adafruit/Adafruit GFX Library@^1.11.9
+    adafruit/DHT sensor library@^1.4.4
     bblanchon/ArduinoJson@^7.0.4
